# PySoundlab

./: .gitignore  README.md  pyproject.toml  requirements.txt  temp_current.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/Nodes/: AudioInputNode.tsx  AudioOutputNode.tsx  DelayNode.tsx  FilterNode.tsx  GainNode.tsx  PotiNode.tsx  ReverbNode.tsx
frontend/src/utils/: buildGraphPayload.tsx
src/: generator.py  graph.py  main.py  node.py  nodes.py
src/API/: GeneratorApi.py  GraphApi.py  NodeApi.py  generator_api.py  graph_api.py  node_api.py
src/Core/CodeGen/: Generator.py  generator.py
src/Core/Graph/: Graph.py  graph.py
src/Core/Mapper/: GraphMapper.py  NodeMapper.py  node_mapper.py
src/Core/Mapper/NodeMappings/: AudioInput.py  AudioOutput.py  Delay.py  Filter.py  Gain.py  Reverb.py  __init__.py  audio_input.py  audio_output.py  delay.py  filter.py
src/Core/Node/: Node.py  Nodes.py  node.py  nodes.py
src/Models/: GraphModel.py  NodeModel.py  graph_model.py  node_model.py
