[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySoundLab"
version = "0.1.0"
description = "A Python project for sound processing and analysis"
authors = [
    {name = "maxabram", email = "max.abram@outlook.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["src"]
